[package]
name = "pos_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.6"
warp = "0.3"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
hex = "0.4"  # For address encoding
sha2 = "0.10" # For cryptographic hashing
chrono = "0.4" # Add this line
